docs: add instructions for running the binary on JDK 9 and above